# nn-library

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: humaneval-pilot-findings.md  rwt-integration-findings.md  scope-convergence-experiment.md  spec-v0.3.1.md
nn_logic/: __init__.py  aggregate.py  boundary.py  definedness.py  evidence.py  helpers.py  operators.py  policy.py  query.py  state.py  trace.py  types.py  velocity.py
runs/: HumanEval_0__diff__seed1.json  HumanEval_0__hybrid__seed1.json  HumanEval_0__nu__seed1.json  HumanEval_1__diff__seed1.json  HumanEval_1__hybrid__seed1.json  HumanEval_1__nu__seed1.json  HumanEval_2__diff__seed1.json  HumanEval_2__hybrid__seed1.json  HumanEval_2__nu__seed1.json  HumanEval_3__diff__seed1.json  HumanEval_3__hybrid__seed1.json  HumanEval_3__nu__seed1.json  HumanEval_4__diff__seed1.json  HumanEval_4__hybrid__seed1.json  HumanEval_4__nu__seed1.json
rwt_integration/: __init__.py  claude_provider.py  config.py  convergence.py  evaluation.py  humaneval_runner.py  loop.py  metacognition.py  metrics.py  providers.py  tasks.py
tests/: conftest.py  test_aggregate.py  test_boundary.py  test_conflict.py  test_convergence.py  test_decay.py  test_definedness.py  test_evaluation.py  test_evidence.py  test_incorporate.py  test_licensing.py  test_loop.py  test_merge.py  test_metacognition.py  test_metrics.py  test_negdefine.py  test_operators_algebra.py  test_penalty_decay.py  test_query.py  test_recontextualize.py  test_split.py  test_velocity.py  test_worked_example.py
