[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nn-logic"
version = "0.3.1"
description = "Reference implementation of Null/Not-Null (N/N-N) Logic — a definedness calculus"
requires-python = ">=3.9"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
